--- a/src/components/styles/sidenav.css
+++ b/src/components/styles/sidenav.css
@@ -1,5 +1,5 @@
 .side-nav--container {
-  height: 100vh;
+  height: 100%;
   background-color: #fafafc;
   width: 100%;
   border-right: 1px solid #f1f1f3;
